--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -171,6 +171,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
+  overflow-x: auto;
 }
 pre code {
   padding: 0;
